fixed horizontal scroll glitch

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
     position: absolute;
 
     background-image: url("images/prism.png");
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
+    
     font-family: 'Merriweather Sans', sans-serif;
     text-shadow: 0 0 0.02em var(--darkergray);
     font-size: calc(10px + 3vmin);
@@ -14,5 +15,5 @@
 }
 
 .App * {
-    border: red solid;
+    /*border: red solid;*/
 }
